--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ font-family: 'Poppins', sans-serif;
   /* Black */
   --section-bg-7: #282b38;
   /* Black */
+  --section-bg-8: #ffb100;
   /* Border Colors */
   --border-color-1: #e5eaee;
   /* White */
